--- a/source/sass/blocks/partners.scss
+++ b/source/sass/blocks/partners.scss
@@ -6,13 +6,15 @@
   align-items: center;
   text-align: center;
 
-  box-sizing: border-box;
+  box-sizing: content-box;
+  height: 100%;
 
   @media (max-width: 500px) {
-    background-image: url('../img/bg-goals.svg');
-    background-size: 100% 100%;
-    background-position: 100%;
+    background-image: url(../img/bg-goals.svg);
+    background-size: cover;
+    background-position: 100% 100%;
     background-repeat: no-repeat;
+    background-clip: border-box;
   }
 
   &__inner {
