--- a/source/sass/blocks/reg.scss
+++ b/source/sass/blocks/reg.scss
@@ -11,7 +11,7 @@
     width: 100%;
     min-height: 680px;
     background-color: #ccf4ff;
-    box-shadow: 0px 0px 10px 2px #3cd8ff;
+    box-shadow: 0 0 15px 0 #69e1ff;
     background-image: url('../img/reg1.svg');
     
     display: flex;
